Added News Model

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "MegaSettings": {
+        "Email": "tkak881@gmail.com",
+        "Password": "TestingApp"
+    },
     "AllowedHosts": "*"
 }
