Reworked Auth system

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,11 @@
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5432;Database=ontu_phd;Username=postgres;Password=1337;"
     },
+    "Jwt": {
+        "Key": "VerySecretKeyHelloWhoEverReadThis-9999999999999",
+        "Issuer": "OntuPhdApi",
+        "Audience": "OntuPhdApi"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
