--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=ontu_phd;Username=postgres;Password=1337;"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=ontu_phd;Username=postgres;Password=1337;IncludeErrorDetail=true;"
     },
     "Jwt": {
         "Key": "VerySecretKeyHelloWhoEverReadThis-9999999999999",
